--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "react": "^18",
     "react-dom": "^18",
+    "next-auth": "^4.23.1",
     "next": "13.5.6"
   },
   "devDependencies": {
